# bustag

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  dev.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
bustag/: __init__.py  main.py  util.py
bustag/app/: api_service.py  fastapi_app.py  index.py  local.py  schedule.py  tasks.py  wsgi.py
bustag/app/static/css/: bustag.css
bustag/app/static/js/: bustag.js
bustag/app/views/: base.tpl  fetch.tpl  index.tpl  local.tpl  login.tpl  model.tpl  tagit.tpl
bustag/model/: classifier.py  prepare.py
bustag/spider/: bus_spider.py  crawler.py  db.py  migrate.py  parser.py  parser_missav.py
bustag/spider/sources/: __init__.py  base.py  bus.py  missav.py
data/: bus.db  config.ini
docker/: entry.sh
docs/: ARCHITECTURE_GUIDE.md  CRAWLER_ONLY_RUNBOOK.md  MIGRATION_RUNBOOK.md  MISSAV_STATUS.md  PROD_RELEASE_CHECKLIST.md  REFACTOR_CHECKLIST.md  REFACTOR_LOG.md  WEB_STACK_ROLLOUT.md
migrations/sql/: 0001_baseline_schema.sql
scripts/: crawler_loop.sh  crawler_once.sh  export_crawler_data.sh  import_crawler_data.sh  migrate.sh  missav_probe.sh  pre_release_web_check.sh  release_web_gate.sh  start.sh  web_stack_drill.sh
tests/: conftest.py  test_api_service.py  test_app_lifecycle.py  test_db.py  test_fastapi_app.py  test_main.py  test_migrate.py  test_missav.py  test_model.py  test_model_async.py  test_parser.py  test_persist.py  test_prepare.py  test_schedule_async.py  test_spider.py  test_tasks.py  test_tasks_backend.py  test_util.py  test_wsgi_stack.py
